----------
v6.3.0-git
----------

[mms] Filter out relative image URLs in HTML message data.
[mms] Implement lazy loading for images in HTML messages.
[mms] Add 'dynamic_prefs' hook to allow for changing of default values for
      browser-based preferences in dynamic view.
[mms] Removed compose 'use_vfs' configuration option.
[mjr] Add IMP_Api::addFlags().
[mms] Allow multiple independent attachment actions on the dynamic compose
      screen.
[mms] Add upload progress bar in dynamic compose screen when adding
      attachments.
[mms] Uniquely identify sent-mail mailboxes by identity in main folder tree
      (Request #12721).
[mms] Don't send empty text part if a message contains attachments.
[mms] Add button to allow folder tree to be rebuilt in smartmobile view.
[mms] Add option to poll mailbox for new mailbox when creating a mailbox
      (Request #13227).


------
v6.2.3
------

[mms] Fix some folder display issues when not using IMAP subscriptions in
      dynamic view (Bug #13553).
[mms] Fix accessing dynamic compose page when file uploads are not available
      (Bug #13580).
[mms] Fix saving unique browser preferences for a specific backend in dynamic
      view.
[mms] Fix toggling select all checkbox in both dynamic mailbox layouts.


------
v6.2.2
------

[mms] Ensure that search/POP3 mailbox listings are saved even if there is an
      issue with the underlying cache backend.
[mms] Fix replying to non-UTF-8 messages when the 'reply_charset' preference
      is true.
[jan] Fix vCard MIME viewer.
[jan] Fix MIME viewer form actions in basic view (Bug #12677).
[mms] Don't store/retrieve message history data if the Message-ID is
      missing/invalid.
[mms] Fix resuming draft from mailbox page in basic view.
[mms] Fix displaying Virtual Trash mailbox (Bug #13418).
[mms] Fix menu actions on the minimal message page (Bug #13440).
[jan] Fix switching to HTML editor in basic mode if signature display is not
      active.